--- a/package.json
+++ b/package.json
@@ -5,16 +5,23 @@
   "scripts": {
     "build": "react-router build",
     "dev": "react-router dev",
-    "start": "react-router-serve ./build/server/index.js",
+    "start": "cross-env NODE_ENV=production react-router-serve ./build/server/index.js",
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
     "@react-router/node": "^7.2.0",
-    "@react-router/serve": "^7.2.0",
+    "@tanstack/react-query": "^5.66.8",
+    "@typegoose/typegoose": "^12.11.0",
+    "class-transformer": "^0.5.1",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.4.7",
     "isbot": "^5.1.17",
+    "mongoose": "^8.10.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router": "^7.2.0"
+    "react-router": "^7.2.0",
+    "tiny-invariant": "^1.3.3",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@react-router/dev": "^7.2.0",
@@ -22,6 +29,8 @@
     "@types/node": "^20",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
+    "@vercel/node": "^5.1.2",
+    "@vercel/react-router": "^1.0.2",
     "react-router-devtools": "^1.1.0",
     "tailwindcss": "^4.0.0",
     "typescript": "^5.7.2",
